# pardus-gnome-greeter

./: .gitignore  README.md  env.txt  meson.build  pardus-gnome-greeter  pardus-gnome-greeter-build-deps_0.0.1_all.deb  pardus-gnome-greeter-build-deps_0.0.1_amd64.buildinfo  pardus-gnome-greeter-build-deps_0.0.1_amd64.changes  pardus-gnome-greeter.gresource  pardus-gnome-greeter.gresource.xml  pardus-gnome-greeter.in  setup.py  tr.org.pardus.pardus-gnome-greeter.appdata.xml.in  tr.org.pardus.pardus-gnome-greeter.desktop  tr.org.pardus.pardus-gnome-greeter.desktop.in  update-translations.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
css/: style.css
data/: custom_shortcuts.json  extensions.json  layout_config.json  links.json  shortcuts.json  style.css
data/autostart/: tr.org.pardus.pardus-gnome-greeter-autostart.desktop  tr.org.pardus.pardus-gnome-greeter-daemon.desktop
data/css/: accent.css  cards.css  extensions.css  header.css  layout.css  sliders.css  style.css  time.css  wallpaper.css  welcome.css
data/json/: custom_shortcuts.json  extensions.json  icon_themes.json  layout_config.json  links.json  shortcuts.json  social_media.json  wallpaper_sources.json
data/lib/pardus/: AboutWindow.py  App.py  ApplicationWindow.py  Box.py  Button.py  Flowbox.py  Image.py  Label.py  ListBox.py  ListBoxRow.py  Ptk.py  Scale.py  ScrolledWindow.py  Separator.py  Stack.py  ToggleButton.py  Widget.py  gtk_settings.py  utils.py
data/po/: LINGUAS  POTFILES  es.po  meson.build  pardus-gnome-greeter.pot  pt.po  sp.po  tr.po
data/po/pt/LC_MESSAGES/: pardus-gnome-greeter.mo
data/po/tr/LC_MESSAGES/: pardus-gnome-greeter.mo
data/schema/: org.pardus.pardus-gnome-greeter.gschema.xml
data/schemas/: meson.build  tr.org.pardus.pardus-gnome-greeter.gschema.xml
data/ui/: ApplicationsPage.ui  DisplayPage.ui  ExtensionPage.ui  LayoutPage.ui  MainWindow.ui  OutroPage.ui  ThemePage.ui  TimePage.ui  WallpaperPage.ui  WelcomePage.ui
data/ui/components/: AddWallpaperSourcesDialog.ui  CursorSizeSlider.ui  DesktopIconSlider.ui  ExtensionCard.ui  FileManagerIconSlider.ui  LiveWallpaperSourceRow.ui  WallpaperPreviewDialog.ui  WallpaperThumbnail.ui
debian/: changelog  control  copyright  meson.build  rules
old/: README.md  meson.build  tr.org.pardus.pardus-gnome-greeter.desktop
old/data/: social_media.json  style.css
old/data/po/: POTFILES  pardus-gnome-greeter.pot  tr.po
old/data/schema/: meson.build
old/debian/: rules
old/src/: Keybindings.py  LayoutManager.py  MainWindow.py  WallpaperManager.py  utils.py
old/src/Pages/: Apps.py  Extension.py  Layout.py  Theme.py
schema/: default.gschema.xml  gschemas.compiled
src/: ExtensionManager.py  Keybindings.py  LayoutChanger.py  LayoutManager.py  Main.py  MainWindow.py  MainWindow.py.bak  Server.py  WallpaperManager.py  utils.py
src/Pages/: Apps.py  Display.py  Extension.py  Layout.py  Outro.py  Theme.py  Time.py  Wallpaper.py  Welcome.py
src/pardus_gnome_greeter/: __init__.py  __main__.py  about_dialog.py  daemon.py  main_window.py  translation.py
src/pardus_gnome_greeter/components/: AboutDialog.py  AddWallpaperSourcesDialog.py  LiveWallpaperSourceRow.py  WallpaperPreviewDialog.py  __init__.py  about_dialog.py
src/pardus_gnome_greeter/managers/: DisplayManager.py  ExtensionManager.py  LayoutManager.py  LiveWallpaperManager.py  ShortcutManager.py  ThemeManager.py  WallpaperManager.py  __init__.py  settings.py
src/pardus_gnome_greeter/pages/: __init__.py  applications.py  display.py  extension.py  layout.py  outro.py  theme.py  time.py  wallpaper.py  welcome.py
test/: test.py
testui/: MainWindow.py  WallpaperManager.py  Welcome.py  asd.py  qwe.py  test.css  ui.cmb  ui.ui
ui/: #ui.glade#  test.cmb  test.ui  ui.cmb  ui.cmb.db  ui.glade  ui.ui  ui2.glade  ui2.glade~  uitest.py
ui/yedek/: ui.cmb  ui.ui
